login popup usage button alignment fixed

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1865,7 +1865,7 @@ confirm {
         margin-bottom:20px;
         padding:0;
         width:32px;
-        height:32px;
+        height:34px;
         float:left;
     }
     input[type~="email"], input[type~="password"] {
